--- a/test_planning_graph.ipynb
+++ b/test_planning_graph.ipynb
@@ -2,27 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "False == False"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -39,7 +26,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.007s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -67,7 +54,7 @@
     "logging.basicConfig(format=FORMAT, level=logging.DEBUG, filename='test_planning_graph.log', filemode='w+')\n",
     "\n",
     "test = TestLoader().loadTestsFromName('tests.test_my_planning_graph.'+\n",
-    "                                      'TestPlanningGraphMutex.test_interference_mutex') \n",
+    "                                      'TestPlanningGraphHeuristics.test_levelsum') \n",
     "TextTestRunner().run(test)"
    ]
   },
@@ -84,25 +71,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...F..\n",
-      "======================================================================\n",
-      "FAIL: test_interference_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
+      ".\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 91, in test_interference_mutex\n",
-      "    \"Precondition from one node opposite of effect of other node should be mutex\")\n",
-      "AssertionError: False is not true : Precondition from one node opposite of effect of other node should be mutex\n",
+      "Ran 1 test in 0.008s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.042s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=6 errors=0 failures=1>"
+       "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
       ]
      },
      "execution_count": 2,
@@ -119,16 +98,16 @@
     "FORMAT = '%(asctime)-15s %(levelname)-8s %(message)s'\n",
     "logging.basicConfig(format=FORMAT, level=logging.DEBUG, filename='test_planning_graph.log', filemode='w+')\n",
     "\n",
-    "ts = tests.test_my_planning_graph.TestPlanningGraphMutex()\n",
+    "ts = tests.test_my_planning_graph.TestPlanningGraphHeuristics()\n",
     "suite = TestLoader().loadTestsFromModule(ts)\n",
     "TextTestRunner().run(suite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -137,52 +116,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "F....FFF..\n",
-      "======================================================================\n",
-      "FAIL: test_levelsum (tests.test_my_planning_graph.TestPlanningGraphHeuristics)\n",
+      "..........\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 138, in test_levelsum\n",
-      "    self.assertEqual(self.pg.h_levelsum(), 1)\n",
-      "AssertionError: 0 != 1\n",
+      "Ran 10 tests in 0.066s\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_inconsistent_effects_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 85, in test_inconsistent_effects_mutex\n",
-      "    \"Canceling effects not marked as mutex\")\n",
-      "AssertionError: False is not true : Canceling effects not marked as mutex\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_inconsistent_support_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 115, in test_inconsistent_support_mutex\n",
-      "    \"Mutex parent actions should result in inconsistent-support mutex\")\n",
-      "AssertionError: False is not true : Mutex parent actions should result in inconsistent-support mutex\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_interference_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 91, in test_interference_mutex\n",
-      "    \"Precondition from one node opposite of effect of other node should be mutex\")\n",
-      "AssertionError: False is not true : Precondition from one node opposite of effect of other node should be mutex\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 10 tests in 0.090s\n",
-      "\n",
-      "FAILED (failures=4)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=10 errors=0 failures=4>"
+       "<unittest.runner.TextTestResult run=10 errors=0 failures=0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
